--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Personal portfolio </title>
 
 
-    - custom css link
+<!--     - custom css link -->
   -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
