--- a/index.html
+++ b/index.html
@@ -588,8 +588,8 @@
 
         </div>
 
-        <form action="" class="contact-form">
-
+       <div class="contact-form">
+       <form action="https://formspree.io/f/mgegyldd"  method="POST" >
           <div class="form-wrapper">
 
             <label for="name" class="form-label">Name</label>
@@ -651,6 +651,7 @@
           <button type="submit" class="btn btn-primary">Send</button>
 
         </form>
+      </div>
 
       </section>
 
